welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:1: error: unclosed string literal
"def flower(c:Color){
^FlowerPot:46: error: unclosed string literal
}"
 ^FlowerPot:1: error: unclosed string literal
"def flower(c:Color){
^FlowerPot:1: error: illegal start of definition
"def flower(c:Color){
^FlowerPot:17: error: expected class or object definition
def growFlowers(){
^FlowerPot:46: error: unclosed string literal
}"
 ^FlowerPot:64: error: expected class or object definition
def growFlowers(){
^FlowerPot:70: error: Unmatched closing brace '}' ignored here
}
^